<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical"
    tools:context=".DetailFragment">

    <TextView
        android:id="@+id/nombreView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/nombre_del_lugar"
        android:textColor="@color/name_place"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.146"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_lugar_View" />

    <ImageView
        android:id="@+id/image_lugar_View"
        android:layout_width="302dp"
        android:layout_height="157dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/imagen_del_lugar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_logo_View"
        tools:srcCompat="@tools:sample/backgrounds/scenic" />

    <TextView
        android:id="@+id/destination_description"
        android:layout_width="match_parent"
        android:layout_height="232dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:text="@string/descripcion_detellada"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/temperaturaView" />

    <ImageView
        android:id="@+id/image_logo_View"
        android:layout_width="99dp"
        android:layout_height="66dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/logo_de_a_donde_ir"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@drawable/logo_app" />

    <ImageButton
        android:id="@+id/regreso_Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="#BA673AB7"
        android:contentDescription="@string/flecha_en_el_boton_de_regreso"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/image_lugar_View"
        app:layout_constraintEnd_toStartOf="@+id/image_logo_View"
        app:layout_constraintHorizontal_bias="0.159"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/abc_vector_test" />

    <TextView
        android:id="@+id/temperaturaView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:text="@string/temperatura"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ciudadView" />

    <TextView
        android:id="@+id/ciudadView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/ciudad_de_ubicacion"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nombreView" />
    <ImageView
        android:id="@+id/icon_name"
        android:contentDescription="@string/icono_de_ubicacion"
        android:layout_width="16dp"
        android:layout_height="16dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintTop_toTopOf="@id/ciudadView"
        app:layout_constraintEnd_toStartOf="@id/ciudadView"
        app:srcCompat="@drawable/ic_point_map" />

    <ImageView
        android:id="@+id/iconoTemperatureView"
        android:src="@drawable/ic_temperture"
        android:contentDescription="@string/icono_de_termometro"
        android:layout_width="16dp"
        android:layout_height="16dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintTop_toTopOf="@id/temperaturaView"
        app:layout_constraintEnd_toStartOf="@id/temperaturaView" />

    <ImageButton
        android:id="@+id/iconoMapa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="#BA673AB7"
        android:contentDescription="@string/icono_de_maps"
        android:src="@android:drawable/ic_dialog_map"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nombreView" />

</androidx.constraintlayout.widget.ConstraintLayout>